--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <!--Header Weather-->
       <header class="subnav-hero-section">
         <div >
-          <h1 class="name" id="name"></h1>
+          <h1 class="name" id="name">  </h1>
           <p class="temp"></p>
           <p class="humidity"></p>
           <p class="wind"></p>
@@ -47,20 +47,20 @@
         </div>
       </nav>
 
-      <div class="row small-up-2 medium-up-3 large-up-4">
+      <div id = "days" class="row small-up-2 medium-up-3 large-up-4">
         
         <div class="column">
-          <h5>My Site</h5>
-          <p class="tempDay1"></p>
-          <p class="humDay1"></p>
-        </div>
+          <h5>Day 1</h5>
+          <div class="currLocation"></div>
+          <div class="currTemp"></div>
+          </div>
         <div class="column">
-          <h5>My Site</h5>
+          <h5>Day 2</h5>
           <p class="tempDay2"></p>
           <p class="humDay2"></p>
         </div>
         <div class="column">
-          <h5>My Site</h5>
+          <h5>Day 3</h5>
           <p class="tempDay3"></p>
           <p class="humDay3"></p>
         </div>
